compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__complex_division_by_non_zero_int.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 529
expression: "pub fn main() {\n  { 1 + 2 } / 3\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  { 1 + 2 } / 3
}

----- COMPILED JAVASCRIPT
export function main() {
  return globalThis.Math.trunc((1 + 2) / 3);
}
