compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__division_by_non_zero_float.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 493
expression: "pub fn main() {\n  1.1 /. 2.3\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  1.1 /. 2.3
}

----- COMPILED JAVASCRIPT
export function main() {
  return 1.1 / 2.3;
}
