compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__division_by_zero_float.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 484
expression: "pub fn main() {\n  1.1 /. 0.0\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  1.1 /. 0.0
}

----- COMPILED JAVASCRIPT
export function main() {
  return 0.0;
}
