compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__division_inf_by_inf_float.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 473
expression: "\npub fn main(x) {\n  -100.001e123_456_789 /. 100.001e123_456_789\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  -100.001e123_456_789 /. 100.001e123_456_789
}


----- ERROR
error: Float outside of valid range
  ┌─ /src/one/two.gleam:3:3
  │
3 │   -100.001e123_456_789 /. 100.001e123_456_789
  │   ^^^^^^^^^^^^^^^^^^^^

This float value is too large to be represented by a floating point type:
float values must be in the range -1.7976931348623157e308 -
1.7976931348623157e308.

error: Float outside of valid range
  ┌─ /src/one/two.gleam:3:27
  │
3 │   -100.001e123_456_789 /. 100.001e123_456_789
  │                           ^^^^^^^^^^^^^^^^^^^

This float value is too large to be represented by a floating point type:
float values must be in the range -1.7976931348623157e308 -
1.7976931348623157e308.
