compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__float_divide_complex_expr.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 119
expression: "\npub fn go() {\n  case 1.0 >=. 0.0 {\n    True -> 2.0\n    False -> 4.0\n  } /. 2.0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  case 1.0 >=. 0.0 {
    True -> 2.0
    False -> 4.0
  } /. 2.0
}


----- COMPILED JAVASCRIPT
export function go() {
  return (() => {
    let $ = 1.0 >= 0.0;
    if ($) {
      return 2.0;
    } else {
      return 4.0;
    }
  })() / 2.0;
}
