compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__float_equality.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 179
expression: "\npub fn go() {\n  1.0 != 2.0\n  1.0 == 2.0\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  1.0 != 2.0
  1.0 == 2.0
}


----- COMPILED JAVASCRIPT
export function go() {
  1.0 !== 2.0;
  return 1.0 === 2.0;
}
