compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__numbers__float_literals.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/numbers.rs
assertion_line: 23
expression: "\npub fn go() {\n  1.5\n  2.0\n  -0.1\n  1.\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  1.5
  2.0
  -0.1
  1.
}


----- COMPILED JAVASCRIPT
export function go() {
  1.5;
  2.0;
  -0.1;
  return 1.0;
}
